[gd_scene load_steps=22 format=3 uid="uid://c8vbijy7pfbej"]

[ext_resource type="Texture2D" uid="uid://c8kole14ena05" path="res://Image/Game/SelectGodsClan.png" id="1_bwn3n"]
[ext_resource type="Texture2D" uid="uid://k8fybc88w2qe" path="res://Image/Gods/GoddessOfTeleportation/Déesse de la Téléportation IA - Couleur.png" id="2_j0u8u"]
[ext_resource type="FontFile" uid="uid://dq1fkh6cln463" path="res://Font/Forgotten.ttf" id="2_l1qb8"]
[ext_resource type="Script" path="res://Script/Game/SelectGodsScreen.gd" id="2_lqked"]
[ext_resource type="Texture2D" uid="uid://be5pnbqm62d85" path="res://Image/Gods/GoddessOfTeleportation/Pieces/Base pièce doubler - Pion.png" id="3_2etwq"]
[ext_resource type="Texture2D" uid="uid://dvikojf66da31" path="res://Image/Gods/GoddessOfTeleportation/Pieces/Base pièce doubler - Cavalier.png" id="4_5ovrl"]
[ext_resource type="Texture2D" uid="uid://wlpa3npnt518" path="res://Image/Gods/GoddessOfTeleportation/Pieces/Base pièce doubler - Fou.png" id="5_gnpir"]
[ext_resource type="Texture2D" uid="uid://cpa6060pefn8a" path="res://Image/Gods/GoddessOfTeleportation/Pieces/Base pièce doubler - Tour.png" id="6_o8iax"]
[ext_resource type="Texture2D" uid="uid://chpg7jv1ptpmh" path="res://Image/Gods/GoddessOfTeleportation/Pieces/Base pièce doubler - Reine.png" id="7_twv27"]
[ext_resource type="Texture2D" uid="uid://b84u2433y625v" path="res://Image/Gods/GoddessOfTeleportation/Pieces/Base pièce doubler - Roi.png" id="8_xefhh"]
[ext_resource type="Texture2D" uid="uid://t8120e1gigna" path="res://Image/Gods/GodOfDeath/Dieu de la Mort IA - Couleur.png" id="9_2oebp"]
[ext_resource type="Texture2D" uid="uid://bd1htsy7dl5rt" path="res://Image/Gods/GodOfDeath/Pieces/Base pièce doubler - Pion.png" id="10_qod6r"]
[ext_resource type="Texture2D" uid="uid://ppnix40qrlnv" path="res://Image/Game/HoverSelectionGods.png" id="11_2iujh"]
[ext_resource type="Texture2D" uid="uid://ivaweev7p1my" path="res://Image/Menu/HoverPlayer1Selecting.png" id="11_ja33u"]
[ext_resource type="Texture2D" uid="uid://bdkfqi3grb1hh" path="res://Image/Gods/GodOfDeath/Pieces/Base pièce doubler - Cavalier.png" id="11_xorgs"]
[ext_resource type="Texture2D" uid="uid://b8hfoxkyylalb" path="res://Image/Gods/GodOfDeath/Pieces/Base pièce doubler - Fou.png" id="12_rfgj0"]
[ext_resource type="Texture2D" uid="uid://diq3a3gimc0wl" path="res://Image/Gods/GodOfDeath/Pieces/Base pièce doubler - Tour.png" id="13_i7581"]
[ext_resource type="Texture2D" uid="uid://kwhrrketcjnr" path="res://Image/Menu/NoGodSelectSelectionGods.png" id="13_qchtu"]
[ext_resource type="Texture2D" uid="uid://dnegftn2ghvcw" path="res://Image/Gods/GodOfDeath/Pieces/Base pièce doubler - Reine.png" id="14_0soax"]
[ext_resource type="Texture2D" uid="uid://dytau56ucb64w" path="res://Image/Gods/GodOfDeath/Pieces/Base pièce doubler - Roi.png" id="15_kntfo"]
[ext_resource type="Texture2D" uid="uid://kpj25kkxlv06" path="res://Image/Menu/HoverPlayer2Selecting.png" id="20_lwy8y"]

[node name="SelectGodsScreen" type="Sprite2D"]
texture = ExtResource("1_bwn3n")
centered = false
script = ExtResource("2_lqked")

[node name="TimerStartGame" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PlayerTurnSelectGod" type="Label" parent="."]
offset_left = 605.0
offset_top = 159.0
offset_right = 1336.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("2_l1qb8")
theme_override_font_sizes/font_size = 40

[node name="Player1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 38.0
offset_top = 248.0
offset_right = 546.0
offset_bottom = 974.0

[node name="TimerSelectionGodPlayer1" type="Timer" parent="Player1"]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Username" type="Label" parent="Player1"]
layout_mode = 0
offset_left = 82.0
offset_top = -96.0
offset_right = 330.0
offset_bottom = -29.0
theme_override_fonts/font = ExtResource("2_l1qb8")
theme_override_font_sizes/font_size = 60
text = "Username1"

[node name="DisplayGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(0, 3)
scale = Vector2(0.188, 0.188)
texture = ExtResource("2_j0u8u")
centered = false

[node name="DisplayPawnGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(416, 55)
scale = Vector2(0.475, 0.475)
texture = ExtResource("3_2etwq")
centered = false

[node name="DisplayKnightGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(416, 160)
scale = Vector2(0.475, 0.475)
texture = ExtResource("4_5ovrl")
centered = false

[node name="DisplayBishopGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(416, 265)
scale = Vector2(0.475, 0.475)
texture = ExtResource("5_gnpir")
centered = false

[node name="DisplayRookGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(416, 369)
scale = Vector2(0.475, 0.475)
texture = ExtResource("6_o8iax")
centered = false

[node name="DisplayQueenGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(416, 472)
scale = Vector2(0.475, 0.475)
texture = ExtResource("7_twv27")
centered = false

[node name="DisplayKingGodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(416, 577)
scale = Vector2(0.475, 0.475)
texture = ExtResource("8_xefhh")
centered = false

[node name="HoverPlayerSelecting" type="Sprite2D" parent="Player1"]
position = Vector2(-39, -248)
texture = ExtResource("11_ja33u")
centered = false

[node name="TimerTextPlayer1" type="Label" parent="Player1"]
layout_mode = 0
offset_left = 129.0
offset_top = -216.0
offset_right = 452.0
offset_bottom = -135.0
theme_override_fonts/font = ExtResource("2_l1qb8")
theme_override_font_sizes/font_size = 60
text = "Timer player1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GodsSelection" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 606.0
offset_top = 254.0
offset_right = 1326.0
offset_bottom = 968.0

[node name="ButtonGoddessOfTeleportation" type="Button" parent="GodsSelection"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 34.0
offset_top = 60.0
offset_right = 130.0
offset_bottom = 156.0
mouse_default_cursor_shape = 2

[node name="ButtonGodOfDeath" type="Button" parent="GodsSelection"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 173.0
offset_top = 60.0
offset_right = 269.0
offset_bottom = 156.0
mouse_default_cursor_shape = 2

[node name="HoverSelectionGods" type="Sprite2D" parent="GodsSelection"]
position = Vector2(7, 33)
texture = ExtResource("11_2iujh")
centered = false

[node name="GodSelectingByPlayer1" type="Sprite2D" parent="GodsSelection"]
visible = false
position = Vector2(6.5, 33)
scale = Vector2(1.00667, 1)
texture = ExtResource("13_qchtu")
centered = false

[node name="Player2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1380.0
offset_top = 250.0
offset_right = 1888.0
offset_bottom = 976.0

[node name="TimerSelectionGodPlayer2" type="Timer" parent="Player2"]
wait_time = 20.0
one_shot = true

[node name="Username" type="Label" parent="Player2"]
layout_mode = 0
offset_left = 182.0
offset_top = -96.0
offset_right = 430.0
offset_bottom = -29.0
theme_override_fonts/font = ExtResource("2_l1qb8")
theme_override_font_sizes/font_size = 60
text = "Username2"

[node name="DisplayGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(101, 2)
scale = Vector2(0.188, 0.188)
texture = ExtResource("9_2oebp")
centered = false

[node name="DisplayPawnGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(0, 55)
scale = Vector2(0.475, 0.475)
texture = ExtResource("10_qod6r")
centered = false

[node name="DisplayKnightGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(0, 160)
scale = Vector2(0.475, 0.475)
texture = ExtResource("11_xorgs")
centered = false

[node name="DisplayBishopGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(0, 262)
scale = Vector2(0.475, 0.475)
texture = ExtResource("12_rfgj0")
centered = false

[node name="DisplayRookGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(1, 369)
scale = Vector2(0.475, 0.475)
texture = ExtResource("13_i7581")
centered = false

[node name="DisplayQueenGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(0, 472)
scale = Vector2(0.475, 0.475)
texture = ExtResource("14_0soax")
centered = false

[node name="DisplayKingGodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(1, 577)
scale = Vector2(0.475, 0.475)
texture = ExtResource("15_kntfo")
centered = false

[node name="HoverPlayerSelecting" type="Sprite2D" parent="Player2"]
visible = false
position = Vector2(-1380, -249)
texture = ExtResource("20_lwy8y")
centered = false

[node name="TimerTextPlayer2" type="Label" parent="Player2"]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = -214.0
offset_right = 385.0
offset_bottom = -133.0
theme_override_fonts/font = ExtResource("2_l1qb8")
theme_override_font_sizes/font_size = 60
text = "Timer player2"
vertical_alignment = 1

[node name="ButtonConfirm" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 819.0
offset_top = 992.0
offset_right = 1115.0
offset_bottom = 1063.0
mouse_default_cursor_shape = 2

[connection signal="timeout" from="TimerStartGame" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Player1/TimerSelectionGodPlayer1" to="." method="_on_timer_selection_god_player_1_timeout"]
[connection signal="button_down" from="GodsSelection/ButtonGoddessOfTeleportation" to="." method="_on_button_goddess_of_teleportation_button_down"]
[connection signal="mouse_entered" from="GodsSelection/ButtonGoddessOfTeleportation" to="." method="_on_button_goddess_of_teleportation_mouse_entered"]
[connection signal="mouse_exited" from="GodsSelection/ButtonGoddessOfTeleportation" to="." method="_on_button_goddess_of_teleportation_mouse_exited"]
[connection signal="button_down" from="GodsSelection/ButtonGodOfDeath" to="." method="_on_button_god_of_death_button_down"]
[connection signal="mouse_entered" from="GodsSelection/ButtonGodOfDeath" to="." method="_on_button_god_of_death_mouse_entered"]
[connection signal="mouse_exited" from="GodsSelection/ButtonGodOfDeath" to="." method="_on_button_god_of_death_mouse_exited"]
[connection signal="timeout" from="Player2/TimerSelectionGodPlayer2" to="." method="_on_timer_selection_god_player_2_timeout"]
[connection signal="button_down" from="ButtonConfirm" to="." method="_on_button_confirm_button_down"]
